--- a/component/html/CreateCV.html
+++ b/component/html/CreateCV.html
@@ -7,15 +7,15 @@
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
     <meta name="keyword" content="red, color, colors">
     <meta name="description" content="the beast color in the word">
-    <script defer src="../JavaScript/Logic.js"></script>
+    <script defer src="../javaScript/Logic.js"></script>
     <link rel="stylesheet" href="../Style/style.css">
-    <link rel="icon"href="../Icon/Logo.ico">
+    <link rel="icon"href="./asset/icon/logoRed.svg">
     <title>W-CV</title>
 </head>
     <body>
         <header id="header-cv-creat">
-            <a href="../index.html" id="logo">
-                <img src="../Photo/Logo.png" alt="logo" id="logo-icon">
+            <a href="../../index.html" style="gap: 10px;" id="logo">
+                <img src="../../asset/icon/logoBlack.svg" style="height: 6vh;" alt="logo" id="logo-icon">
                 <span class="logo-wriht">W-CV</span> 
             </a>
         </header>
@@ -38,7 +38,7 @@
 
             <section id="Informations-cv-creat">
 
-                <form action="http://localhost/CV-Generator/PHP/CreateCV.php" method="POST" id="form-cv-creat">
+                <form action="http://localhost/CV-Generator/server/CreateCV.php" method="POST" id="form-cv-creat">
                     <nav id="nav">
                         
                         <!-- informations-personnelles -->
