--- a/component/style/Style.css
+++ b/component/style/Style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 :root{
-    --redcolor: #c00000;
-    --blackcolor:#0b0b0b;
+    --redcolor: #c92b2b;
+    --blackcolor:#161616;
     --whitecolor: white;
     --transition: all 0.3s linear;
     --spacing: 0.1rem;
@@ -33,7 +33,7 @@ header{
     width: 100%;
     height: 10vh;
     z-index: 999;
-    background-color: rgba(102, 30, 30, 0.842);
+    background-color: #16161648;
     justify-content:space-between;
     position: fixed;
     padding: 0 8vw;
@@ -56,13 +56,13 @@ header{
 }
 
 .logo-wriht{
-    color: var(--redcolor);
+    color: var(--blackcolor);
     font-size: 25px;
     font-weight: 800;
 }
 
 .menu a{
-    color: var(--redcolor);
+    color: var(--blackcolor);
     font-size: 1.2rem;
     font-weight: 800;
     padding-left: 30px;
@@ -74,8 +74,8 @@ header{
 }
 
 .menu a:nth-child(2){
-    border-left: var(--redcolor) solid 2px;
-    border-right: var(--redcolor) solid 2px;
+    border-left: var(--blackcolor) solid 2px;
+    border-right: var(--blackcolor) solid 2px;
 }
 
 .menu a:hover{
@@ -160,7 +160,7 @@ header{
 .btn-2:hover{
     color: var(--blackcolor);
     background-color: var(--redcolor);
-    border: var(--blackcolor) solid 2px;
+    border: var(--blackcolor) solid 3px;
 }
 
 .icon-social-media{
